clusters/talos-pve/apps/gokapi/network-policies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: gokapi-app-restrict
  namespace: gokapi
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gokapi
      app.kubernetes.io/instance: gokapi

  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "53842"
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"

    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
